|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-04-22 Benedikt Heintel
	- GUI:
		* deleted: unused functions
		* modified: some basic funtions (thanks to atomo64)

2007-04-21 Benedikt Heintel
	- GUI:
		* fixed bug #146: array warnings and notices in reseller functions
		* added: domain / user name on delete in java-script confirm box
	- LANGUAGES:
		* German: fixed bug #204

2007-04-21 Roland Haeder
	- GUI
		* added: Direct shortcut link in hp.php (admin / reseller) which links
		  directly to the choosen hosting plan. This shall help you
		  find the correct link for your hosting plans. You can use
		  them e.g. in frames or IFRAMEs...

2007-04-19 Benedikt Heintel
	- GUI:
		* fixed bug #185: can't edit custom menu buttons

2007-04-18 Benedikt Heintel
	- DISTS:
		* Fedora: updated files
		* Gentoo: updated files
		* SuSE 10.0: updated files
		* SuSE 9.3: updated files
	- DOCS:
		* SuSE: updated installation
	- ENGINE:
		* fixed backup not running due to abort
	- GUI:
		* fixed stupid default domain error
		* fixed bug #165: encoding not set
		* added link to admin-panel in default e-mail
		* changed all ISPCP Pro to ispCP
		* changed debugger layout
	- TOOLS:
		* PMA update 2.10.2-RC1
	- RELEASE ispCP ω Omega 1.0.0 RC2

2007-04-17 Benedikt Heintel
	- CONFIGS:
		* fixed bug #174: master not longer reachable on adding Domain
	- ENGINE:
		* fixed bug #174: master not longer reachable on adding Domain

2007-04-16 Benedikt Heintel
	- LANGUAGES:
		* Romanian: added missing strings
		* Spanish: added language (Spain)
	- GUI:
		* renamed ispcp-2-0.php => ispcp-functions.php
	- SETUP:
		* fixed erron on uninstall

2007-04-11 Malte Geierhos
	- RELEASE: