@@ -16,7 +16,7 @@ VersionH = 1.0 Priamos
 
 DEFAULT_ADMIN_ADDRESS =
 
-SERVER_HOSTNAME = debian
+SERVER_HOSTNAME = fedora
 
 BASE_SERVER_IP = 127.0.0.1
 
@@ -30,7 +30,7 @@ MR_LOCK_FILE = /tmp/ispcp.lock
 
 CMD_AWK = /usr/bin/awk
 
-CMD_BZIP = /bin/bzip2
+CMD_BZIP = /usr/bin/bzip2
 
 CMD_CHOWN = /bin/chown
 
@@ -74,7 +74,7 @@ CMD_USERDEL = /usr/sbin/userdel
 
 CMD_WC = /usr/bin/wc
 
-PEAR_DIR = /usr/share/php
+PEAR_DIR = /usr/share/pear
 
 #
 # SQL backend variables
@@ -147,23 +147,23 @@ AWSTATS_WEB_DIR = /var/www/awstats
 #
 
 
-APACHE_NAME = apache2
+APACHE_NAME = httpd
 
 APACHE_RESTART_TRY = 3
 
-APACHE_CONF_DIR = /etc/apache2
+APACHE_CONF_DIR = /etc/httpd
 
-APACHE_CMD = /usr/sbin/apache2
+APACHE_CMD = /usr/sbin/httpd
 
-APACHE_LOG_DIR = /var/log/apache2
+APACHE_LOG_DIR = /var/log/httpd
 
-APACHE_BACKUP_LOG_DIR = /var/log/apache2/backup
+APACHE_BACKUP_LOG_DIR = /var/log/httpd/backup
 
-APACHE_USERS_LOG_DIR = /var/log/apache2/users
+APACHE_USERS_LOG_DIR = /var/log/httpd/users
 
-APACHE_MODS_DIR = /etc/apache2/mods-available
+APACHE_MODS_DIR = /etc/httpd/conf.d
 
-APACHE_SITES_DIR = /etc/apache2/sites-available
+APACHE_SITES_DIR = /etc/httpd/vhosts
 
 APACHE_SUEXEC_USER_PREF = vu
 
@@ -171,9 +171,9 @@ APACHE_SUEXEC_MIN_GID = 2000
 
 APACHE_SUEXEC_MIN_UID = 2000
 
-APACHE_USER = www-data
+APACHE_USER = apache
 
-APACHE_GROUP = www-data
+APACHE_GROUP = apache
 
 #
 # Postfix MTA Data
@@ -231,7 +231,7 @@ CMD_NEWALIASES = /usr/bin/newaliases
 
 COURIER_CONF_DIR = /etc/courier
 
-AUTHLIB_CONF_DIR = /etc/courier
+AUTHLIB_CONF_DIR = /etc/authlib
 
 CMD_MAKEUSERDB = /usr/sbin/makeuserdb
 
@@ -258,19 +258,19 @@ CMD_AUTHD = /etc/init.d/courier-authdaemon
 
 CMD_FTPD = /etc/init.d/proftpd
 
-CMD_HTTPD = /usr/sbin/apache2ctl
+CMD_HTTPD = /usr/sbin/httpd
 
 CMD_IMAP = /etc/init.d/courier-imap
 
-CMD_IMAP_SSL = /etc/init.d/courier-imap-ssl
+CMD_IMAP_SSL = /etc/init.d/courier-imap
 
 CMD_MTA = /etc/init.d/postfix
 
-CMD_NAMED = /etc/init.d/bind9
+CMD_NAMED = /etc/init.d/named
 
-CMD_POP = /etc/init.d/courier-pop
+CMD_POP = /etc/init.d/courier-imap
 
-CMD_POP_SSL = /etc/init.d/courier-pop-ssl
+CMD_POP_SSL = /etc/init.d/courier-imap
 
 CMD_ISPCPD = /etc/init.d/ispcp_daemon
 
@@ -350,7 +350,7 @@ HTACCESS_USERS_FILE_NAME = .htpasswd
 
 HTACCESS_GROUPS_FILE_NAME = .htgroup
 
-HTPASSWD_CMD = /usr/bin/htpasswd2
+HTPASSWD_CMD = /usr/bin/htpasswd
 
 #
 # backup management
