@@ -63,7 +63,10 @@ Make sure you are logged in as root.
 3. Install the required modules
    for Debian Etch you can use:
 	# apt-get update && apt-get upgrade
-	# apt-get install `cat ./docs/Debian/debian-packages-etch`
+    # apt-get install `cat ./docs/Debian/debian-packages-sarge`
+
+   for Debian Etch please use:
+   	# apt-get install `cat ./docs/Debian/debian-packages-etch`
 
    Make sure you have added the non-free into your
    /etc/apt/sources.list:
@@ -72,9 +75,6 @@ Make sure you are logged in as root.
    deb-src http://ftp.de.debian.org/debian/            testing         main contrib non-free
    deb     http://security.debian.org/                 testing/updates main contrib non-free
    deb-src http://security.debian.org/                 testing/updates main contrib non-free
-
-   for Debian Sarge please use:
-    # apt-get install `cat ./docs/Debian/debian-packages-sarge`
 
    Make sure you have added the following backport into your
    /etc/apt/sources.list:
