@@ -1,4 +1,4 @@
-ISPCP ω (OMEGA) HowTo Install for Fedora Core 4 - 6
+ispCP ω (OMEGA) HowTo Install for Fedora Core 6
 ================================================================================
 For other Linux distributions please check the other INSTALL files.
 ================================================================================
@@ -16,35 +16,35 @@ Table of Content
 ================================================================================
 1) Version Info
 ---------------
-ISPCP ω Version:		1.0.0
+ispCP ω Version:	1.0.0
 INSTALL Skript:		1.0
 Maintainer:
 Homepage:			http://isp-contol.net
-Linux Distris:		Fedora Core 4 - 6
+Linux Distris:		Fedora Core 6
 
 ================================================================================
 2) Requirements
 ---------------
-There is no must have for a system using ISPCP ω. This is only a recommendation:
+There is no must have for a system using ispCP ω. This is only a recommendation:
 
 Penitum III or K6-4 with 500 MHz
 512 MB RAM
-100 MB disk space (only for install of ISPCP ω)
+100 MB disk space (only for install of ispCP ω)
 Debian (or even any other *NIX-Distribution)
 
-All required packages are listed in ./docs/fc4-packages.txt
+All required packages are listed in ./docs/fedora-packages
 
 ================================================================================
 3) Introduction
 ---------------
-ISPCP ω delivers a complete hosting automation appliance by offering significant
+ispCP ω delivers a complete hosting automation appliance by offering significant
 security, total-cost-of-ownership, and performance advantages over competing
 commercial solutions.
 
-With ISPCP ω you can configure your server and applications, create user with
+With ispCP ω you can configure your server and applications, create user with
 domains with a few point-and-click operations that take less than a minute.
 There is no limit to the number of resellers, users and domains that can be
-created. The core of ISPCP ω are 3 easy-to-use, web-based control panels. ISPCP
+created. The core of ispCP ω are 3 easy-to-use, web-based control panels. ispCP
 provides graphic user interfaces for the administrators, resellers and users.
 
 ================================================================================
@@ -60,8 +60,16 @@ Make sure you are logged in as root.
 	# cd ./ispcp1.0.0
 
 3. Install the required modules from 'fedora-packages'
+	# yum install `cat ./docs/Fedora/fedora-packages`
 
-4. Now there are two ways of install ISPCP ω
+	For RC6 please add:
+	# rpm -ivh http://rpm.livna.org/livna-release-6.rpm
+	# yum install unrar
+
+	# yum install cpan2rpm
+	# cpan2rpm -i http://search.cpan.org/CPAN/authors/id/P/PH/PHOENIX/Term-ReadPassword-0.07.tar.gz
+
+4. Now there are two ways of install ispCP ω
 
 a) via install script
 ---------------------
@@ -77,7 +85,7 @@ b) manualy
 
 5. Open the ispcp.conf and make some changes.
    You have to set up some configuration variables for your linux distribution.
-   ISPCP ω is preconfigurated for Debian 3.1 Sarge.
+   ispCP ω is preconfigurated for Debian 4.0 Etch.
    If you're using another distribution please check, if config files exist in
    ./configs/dists/ and use/change them.
 
@@ -98,37 +106,43 @@ b) manualy
 	# make install
 
 7. Copy all the directories into the system (you may make backups)
-	# cp -Rv /tmp/ispcp-1.0.0/* /
+	# cp -R -L /tmp/ispcp-1.0.0/* /
 
 8. Create the courier user database
-	# cp -a /etc/courier/userdb /etc/authlib/userdb
+	# chown root:root /etc/authlib/userdb
+	# chmod 600 /etc/authlib/userdb
 	# makeuserdb
 
-9. Now it's time to set up the frontend. Change into the engine directory:
+9. Create additional folder for apache
+	# mkdir /etc/httpd/vhosts
+	# echo 'Include vhosts/*.conf' >> /etc/httpd/conf/httpd.conf
+
+10. Now it's time to set up the frontend. Change into the engine directory:
 	# cd /var/www/ispcp/engine/setup
 
-9a. Set the MySQL password, if not set:
+10a. Set the MySQL password, if not set:
 	# mysqladmin -u root password YOUR_PASSWORD
 
-10. Start the engine setup:
+11. Start the engine setup:
 	# ./ispcp-setup
+	(Be careful: the file /etc/named.conf must exist before you run the script.
+	Otherwise setup will failed on trying to backup it!
+	You can use the caching-nameserver package or the system-config-bind tool
+	for create it or you can use touch!)
 
-11. Install ISPCP ω step-by-step
+12. Install ispCP ω step-by-step
 
 	If you get no error, all went good; if you get one, look at
 	http://isp-control.net to solve the problem.
 
-12. There is an error in some courier-versions. Courier won't stop, if you use
+13. There is an error in some courier-versions. Courier won't stop, if you use
 	/etc/init.d/courier-authdaemon stop, so change it:
 	# nano /etc/ini.d/courier-authdaemon
 
 	change: ${libexecdir}/authlib/authdaemon stop
 	into:	killall authdaemond.plain
 
-13. Modify some system values:
-
-	* Open /etc/ispcp/ispcp.conf and change
-	AUTHLIB_CONF_DIR = /etc/authlib
+14. Modify some system values:
 
 	* create sasl2 database:
 	# touch /etc/sasldb2
@@ -138,7 +152,7 @@ b) manualy
 	# chkconfig --add ispcp
 	# service ispcp start
 
-12. Clean the temporary folders:
+15. Clean the temporary folders:
 	# rm -R /tmp/ispcp-1.0.0
 
 
@@ -146,7 +160,7 @@ b) manualy
 5) Update
 ---------
 
-There are two ways of update ISPCP ω
+There are two ways of update ispCP ω
 
 a) via install script
 ---------------------
@@ -167,9 +181,9 @@ Please check http://isp-control.net for any questions not answered in this file.
 7) Credits
 ----------
 
-ISPCP ω is a project of ispCP | isp Control Panel.
+ispCP ω is a project of ispCP | isp Control Panel.
 Please visit our site under http://isp-control.net for further information on
-ISPCP ω, ispCP and other themes.
+ispCP ω, ispCP and other themes.
 
-We hope you enjoy using ISPCP ω. If you like it, help us, to make it better. We
+We hope you enjoy using ispCP ω. If you like it, help us, to make it better. We
 would be glad on any help provided!
