@@ -59,7 +59,7 @@ Admin log = Admin log
 Admin Log = Admin Log
 Admin users = Admin brugere
 Administrator = Administrator
-Administrator level =
+Administrator level = Administrator Niveau
 Administrators = Administratorer
 Adminitrators list is empty! = Administrator listen er tom!
 Alais name = Alias navn
@@ -662,7 +662,7 @@ Please type user password! = Indtast bruger adgangskode!
 Please type your mail autorespond message! = Indtast din autosvar Meddelse!
 Please type your message! = Indtast din Meddelse!
 Please wait for update = Vent venligst på opdatering
-Port =
+Port = Port
 POP/IMAP = POP/IMAP
 Pop/IMAP in = POP/IMAP<br>Indgående
 Pop/IMAP out = POP/IMAP<br>udgående
@@ -726,7 +726,7 @@ Send new login data = Send ny logind data
 Send reply = Send svar
 Senders email = Afsenders email
 Senders name = Afsenders navn
-Serverports =
+Serverports = Serverporte
 Server day statistics = Server statistik pr. dag
 Server error - please choose error page = Server fejl - vælg venligst fejl side
 Server statistics = Server statistik
@@ -743,7 +743,7 @@ Settings saved ! = Indstillinger gemt !
 Setup fee = Setup gebyr
 Setup Fee = Setup Gebyr
 Show = Vis
-Show hosting plan =
+Show hosting plan = Vis hosting plan
 Show in = Vis i
 Size = Størrelse
 SMTP = SMTP
