@@ -59,7 +59,7 @@ Admin log = Beheerders Log
 Admin Log = Beheerders Log
 Admin users = Beheerders
 Administrator = Beheerder
-Administrator level =
+Administrator level = Beheerdersniveau
 Administrators = Beheerders
 Adminitrators list is empty! = Er zijn nog geen beheerders
 Alais name = Aliasnaam
@@ -662,7 +662,7 @@ Please type user password! = Gelieve een gebruiker wachtwoord in te vullen
 Please type your mail autorespond message! = Gelieve uw autoantwoord bericht in te vullen
 Please type your message! = Gelieve uw bericht te typen
 Please wait for update = Even geduld voor update
-Port =
+Port = Poort
 POP/IMAP = POP/IMAP
 Pop/IMAP in = Pop/IMAP in
 Pop/IMAP out = Pop/IMAP uit
@@ -726,7 +726,7 @@ Send new login data = Verstuur nieuwe login informatie
 Send reply = Verstuur antwoord
 Senders email = Verstuurders email
 Senders name = Verstuurders naam
-Serverports =
+Serverports = Serverpoorten
 Server day statistics = Server dag statistieken
 Server error - please choose error page = Server error - kies een error pagina a.u.b.
 Server statistics = Server statistieken
@@ -743,7 +743,7 @@ Settings saved ! = Instellingen opgeslagen !
 Setup fee = Opstartkosten
 Setup Fee = Opstartkosten
 Show = Toon
-Show hosting plan =
+Show hosting plan = Toon hostingpakket
 Show in = Toon in
 Size = Grootte
 SMTP = SMTP
