@@ -10,6 +10,10 @@ ispCP ω 1.0.0 Changelog
 |               * gui: disable stats-alias in client menu         |
 \_________________________________________________________________/
 
+2007-04-26 Benedikt Heintel
+	- DOCS:
+		* Fedora: changed Install file
+
 2007-04-22 Benedikt Heintel
 	- GUI:
 		* deleted: unused functions
